force-app/main/default/objects/FilterField__c/FilterField__c.object-meta.xml
<CustomObject>
    <label>FilterField</label>
    <nameField>
        <displayFormat>FF-{000000}</displayFormat>
        <label>FilterField Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FilterFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>