force-app/main/default/objects/FilterField__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>