force-app/main/default/objects/FilterField__c/fields/FilterObject__c.field-meta.xml
<CustomField>
    <fullName>FilterObject__c</fullName>
    <label>FilterObject</label>
    <referenceTo>FilterObject__c</referenceTo>
    <relationshipLabel>FilterFields</relationshipLabel>
    <relationshipName>FilterFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>