force-app/main/default/objects/FilterField__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <formula>FilterObject__r.Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>