force-app/main/default/objects/FilterField__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>